[package]
name = "subst"
description = "shell-like variable substitution"
version = "0.3.0"
license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/fizyr/subst"
documentation = "https://docs.rs/subst"
readme = "README.md"
publish = ["crates-io"]

keywords = ["substitution", "expansion", "variable", "parameter", "shell"]
categories = ["template-engine", "value-formatting"]

edition = "2018"

[features]
yaml = ["serde", "serde_yaml"]

[dependencies]
memchr = "2.4.1"
serde = { version = "1.0.0", optional = true }
serde_yaml = { version = "0.9.13", optional = true }
unicode-width = "0.1.9"

[dev-dependencies]
assert2 = "0.3.6"
subst = { path = ".", features = ["yaml"] }
serde = { version = "1.0.0", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
