[package]
name = "subst"
description = "shell-like variable substitution"
version = "0.3.2"
license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/fizyr/subst"
documentation = "https://docs.rs/subst"
readme = "README.md"
publish = ["crates-io"]

keywords = ["substitution", "expansion", "variable", "parameter", "shell"]
categories = ["template-engine", "value-formatting"]

edition = "2021"

[features]
toml = ["dep:serde", "dep:toml"]
yaml = ["dep:serde", "dep:serde_yaml"]
preserve-order = ["toml?/preserve_order"]
doc-cfg = []

[dependencies]
memchr = "2.4.1"
serde = { version = "1.0.0", optional = true }
serde_yaml = { version = "0.9.13", optional = true }
toml = { version = "0.8.14", optional = true }
unicode-width = "0.1.9"

[dev-dependencies]
assert2 = "0.3.6"
subst = { path = ".", features = ["toml", "yaml"] }
serde = { version = "1.0.0", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
